Reverted Require back to throw UnsupportedOperationException